Links were updated

--- a/pegasus-email-fall-2023-draft-v1.1.html
+++ b/pegasus-email-fall-2023-draft-v1.1.html
@@ -347,7 +347,7 @@
                                               padding-right: 0;
                                             "
                                             class="zPattern">
-                                            <a href="https://www.ucf.edu/pegasus/the-big-picture/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=image"><img src="https://s3.amazonaws.com/web.ucf.edu/email/2023-Pegasus-Fall/img/Big12-story-Email-300x300-vF.jpg" class="responsiveimg" alt="The Big Picture" border="0" style="
+                                            <a href="https://www.ucf.edu/pegasus/the-big-12/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=image"><img src="https://s3.amazonaws.com/web.ucf.edu/email/2023-Pegasus-Fall/img/Big12-story-Email-300x300-vF.jpg" class="responsiveimg" alt="The Big Picture" border="0" style="
                                                   width: 100% !important;
                                                   height: 300px;
                                                   object-fit: cover;
@@ -370,7 +370,7 @@
                                                 color: #000;
                                                 text-align: left;
                                               " align="left">
-                                              <a href="https://www.ucf.edu/pegasus/the-big-picture/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=title" style="
+                                              <a href="https://www.ucf.edu/pegasus/the-big-12/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=title" style="
                                                   color: #000;
                                                   text-decoration: none;
                                                 ">The Big Picture</a>
@@ -389,7 +389,7 @@
                                               " align="left">
                                               <!-- btn test -->
                                               What UCF&apos;s move to the Big 12 Conference means for the university and Orlando.
-                                              <a class='ctabtn-100 montserratsemibold' href="https://www.ucf.edu/pegasus/the-big-picture/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=more-link" style="
+                                              <a class='ctabtn-100 montserratsemibold' href="https://www.ucf.edu/pegasus/the-big-12/?utm_source=pegasus&amp;utm_medium=email&amp;utm_campaign=fall2023&amp;utm_content=more-link" style="
                                                 ">
                                              
                                                   See Our Journey
