--- a/Email-template-2023-Pegasus-Fall.html
+++ b/Email-template-2023-Pegasus-Fall.html
@@ -596,7 +596,7 @@
                               <table align="center" style="width: 100%; border-spacing: 0; border-collapse: collapse;"><tbody>
                                 <tr>
                                   <td style="padding-left: 0; padding-right: 0;">
-                                    <a href="https://www.ucf.edu/florida-license-plates/?utm_source=pegasus&utm_medium=email&utm_campaign=fall2023&utm_content=image"><img src="https://s3.amazonaws.com/web.ucf.edu/email/2023-Pegasus-Fall/img/PEG-Email-Fa23-Promo-KYR-600x300-vF.jpg" class="responsiveimg" alt="GO BIG, Knight Your Ride, Order your plate today!" border="0" style="width: 100%; height: auto;"></a>
+                                    <a href="https://www.ucf.edu/lp/giving-tuesday/?utm_source=pegasus&utm_medium=email&utm_campaign=fall2023&utm_content=image"><img src="https://s3.amazonaws.com/web.ucf.edu/email/2023-Pegasus-Fall/img/PEG-Email-Fa23-Promo-Giving-Tues-600x300-vF.jpg" class="responsiveimg" alt="Help Unleash Potential. Join UCF for Giving Tuesday on November 28, 2023. Make Your Gift Now." border="0" style="width: 100%; height: auto;"></a>
                                   </td>
                                 </tr>
                               </tbody></table>
